<resources>
    <string name="app_name">Score Calculator</string>
    <string name="message_colourid">Colour Identification:</string>
    <string name="message_colourpts">%d colour points</string>
    <string name="message_pointstotal">%d Total Points</string>
    <string name="message_wbpoints">%d wb points</string>
    <string name="message_nearballpoints">%d</string>
    <string name="message_farballpoints">%d</string>
    <string name="message_robothomepoints">%d</string>
    <string name="button_3fixes">3 Fixes</string>
    <string name="button_2fixes">2 Fixes</string>
    <string name="button_1fix">1 Fix</string>
    <string name="button_0fixes">0 Fixes</string>
    <string name="button_update">Update</string>
    <string name="button_reset">Reset</string>
    <string name="button_wbfailure">WB Failure</string>
    <string name="button_wbsuccess">WB Success</string>
</resources>
