<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp">

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_weight="4"
            android:text="@string/message_colourid"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/message_colorptsfin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.75"
            android:text="@string/message_colourpts"
            android:textSize="12sp" />

    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <Button
            android:onClick="button_fixes3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="12sp"
            android:text="@string/button_3fixes"
            />

        <Button
            android:onClick="button_fixes2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="12sp"
            android:text="@string/button_2fixes" />

        <Button
            android:onClick="button_fixes1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="12sp"
            android:text="@string/button_1fix" />

        <Button
            android:onClick="button_fixes0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="12sp"
            android:text="@string/button_0fixes" />

    </TableRow>

    <TableRow >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Distance from Cones"
            android:textSize="12sp"
            android:layout_marginTop="8dp"/>
    </TableRow>

    <TableRow >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text=""
            android:gravity="left"
            android:layout_weight="1"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Distance"
            android:gravity="center"
            android:layout_weight="1"
            android:textSize="12sp"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Points"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="12sp"
            />
    </TableRow>

    <TableRow >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Near Ball"
            android:gravity="left"
            android:layout_weight="1"
            android:textSize="12sp"
            />

        <EditText
            android:id="@+id/mNearBallEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:textSize="12sp"
            />

        <TextView
            android:id="@+id/message_nearballint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="NB"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="12sp"
            />
    </TableRow>

    <TableRow >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Far Ball"
            android:gravity="left"
            android:layout_weight="1"
            android:textSize="12sp"
            />

        <EditText
            android:id="@+id/mFarBallEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:textSize="12sp"
            />

        <TextView
            android:id="@+id/message_farballint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="FB"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="12sp"
            />
    </TableRow>

    <TableRow >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:text="Robot Home"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/mRobotHomeEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/message_robothomeint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="RH"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="12sp"
            />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <Button
            android:onClick="button_update"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_update" />
    </TableRow>

    <TableRow >



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="White/Black (WB) Mission"
            android:gravity="left"
            android:layout_weight="2"
            android:textSize="12sp"
            />



        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="0"
            android:textSize="12sp"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.25"
            android:text="wb points"
            android:textSize="12sp"
            />
    </TableRow>


    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_wbfailure" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_wbsuccess" />

    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/message_totalpoints"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="0 Total Points"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="24sp"
            />

    </TableRow>

    <TableRow>


        <Button
            android:onClick="button_reset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_reset" />


    </TableRow>

</TableLayout>